--- a/web/src/index.html
+++ b/web/src/index.html
@@ -11,14 +11,19 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <section class="jumbotron jumbotron-fluid text-center">
+      <div class="container">
+        <button type="button" class="btn btn-primary">Primary</button>
+      </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/jquery-3.4.1.slim.min.js"></script>
+    <script src="/jquery-3.4.1.min.js"></script>
     <script src="/popper.min.js"></script>
     <script src="/bootstrap.min.js"></script>
     <script src="/Chart.bundle.min.js"></script>
+    <script src="/custom.js"></script>
 
   </body>
 </html>
